--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
+@font-face {
+  font-family: "Poppins-Medium";
+  src: url(./assets/Fonts/Poppins-Medium.ttf);
+  font-weight: normal;
+
+  font-family: "Poppins-Bold";
+  src: url(./assets/Fonts/Poppins-Bold.ttf);
+
+  font-family: "Poppins-SemiBold";
+  src: url(./assets/Fonts/Poppins-SemiBold.ttf);
+
+  font-family: "Poppins-Regular";
+  src: url(./assets/Fonts/Poppins-Regular.ttf);
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.App::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
 .App {
-  text-align: center;
-}
+  font-family: "Poppins-Medium";
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
