--- a/src/Styles/HeroSection.scss
+++ b/src/Styles/HeroSection.scss
@@ -42,6 +42,7 @@
   gap: 10px;
   color: white;
 }
+
 .about-btns {
   margin-top: 40px;
   display: flex;
@@ -194,6 +195,7 @@
 
 @media (max-width: 600px) {
   .hero-container {
+    height: 85vh;
     // height: auto;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 2fr;
@@ -201,7 +203,11 @@
   }
   .hero-text {
     grid-row: 2;
+    gap: 5px;
     padding-top: 0;
+  }
+  .hero-text span span h3 {
+    font-size: 12px;
   }
 
   .img-container img {
@@ -209,7 +215,8 @@
     padding: 5px;
     margin: 0px;
     width: 100%;
-    max-width: 150px;
+    max-width: 100px;
+    min-width: 80px;
     height: auto;
     // aspect-ratio: 1;
     border-radius: 50%;
@@ -217,15 +224,19 @@
   #dev-logo {
     height: auto;
     width: auto;
-    max-width: 150px;
+    max-width: 120px;
     padding: 0;
   }
   .about-btns {
     margin-top: 10px;
   }
   .about-btns > button {
-    font-size: 12px;
-    padding: 8px;
+    font-size: 8px;
+    padding: 6px;
+  }
+  .about-btns a {
+    font-size: 10px;
+    padding: 6px;
   }
   .hero-text p {
     font-size: 12px;
